Bug 467840 - KDialog always has "-- KDialog" in titlebar, is meaningless to user
Summary: KDialog always has "-- KDialog" in titlebar, is meaningless to user
Status: RESOLVED FIXED
Alias: None
Product: kdialog
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.12.3
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Brad Hards
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-27 03:11 UTC by Michael
Modified: 2023-03-30 19:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael 2023-03-27 03:11:21 UTC
SUMMARY

Right now, KDialog always displays "KDialog" in the title bar, or the suffix "- KDialog" even if a title is set using the --title argument.

Recently, it was decided that "it's an implementation detail meaningless to the user" to have "-- Portal" or "- PolicyKit1 KDE Agent" in the title bar of their respective windows:

https://bugs.kde.org/show_bug.cgi?id=466056
https://bugs.kde.org/show_bug.cgi?id=466059

I feel, and have seen other feedback, that having "KDialog" is meaningless to the user. "KDialog" is only meaningful to programmers and is visual noise otherwise; for 98% of users, it's something that they have to read and ignore, which makes KDE appear technical to users. Yes, we can see it's a dialog window by its very nature, we don't need it spelled out to us.

Can the same fix be applied to KDialog windows? The method was:

    Unset QApplication::applicationDisplayName()


STEPS TO REPRODUCE

1. kdialog --sorry "So sorry that you will see the words in the title bar" --title "Hello"
2. kdialog --sorry "So sorry that you will see the words in the title bar"
3. kdialog --getopenfilename ~/ "audio/mpeg" --title "Hello"

"KDialog" is present, even in standard open file windows.

EXPECTED RESULT

Have an empty title bar by default. If a coder wants to have their title bar contain "KDialog", they could manually add it back in with the --title argument.

SOFTWARE/OS VERSIONS

Operating System: KDE neon 5.27
KDE Plasma Version: 5.27.3
KDE Frameworks Version: 5.104.0
Qt Version: 5.15.8
Kernel Version: 5.19.0-35-generic (64-bit)
Graphics Platform: X11
Comment 1 Bug Janitor Service 2023-03-29 20:59:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kdialog/-/merge_requests/23
Comment 2 Nate Graham 2023-03-30 19:25:05 UTC
Git commit af64f7108ec6804c70f90e6620cfea49c6ff49dc by Nate Graham.
Committed on 30/03/2023 at 19:22.
Pushed by ngraham into branch 'master'.

Remove unnecssary " - KDialog" in window title

Similar to bugs 466056 and 466059, the fact that the app providing this
dialog is KDialog is an implementation detail that isn't useful to the
user. Furthermore, appending the app's name interferes with any custom
title the user of KDialog may have set for the window.
FIXED-IN: 23.04

M  +6    -2    src/kdialog.cpp

https://invent.kde.org/utilities/kdialog/commit/af64f7108ec6804c70f90e6620cfea49c6ff49dc