Remove unnecssary " - KDialog" in window title

Similar to bugs 466056 and 466059, the fact that the app providing this
dialog is KDialog is an implementation detail that isn't useful to the
user. Furthermore, appending the app's name interferes with any custom
title the user of KDialog may have set for the window.

BUG: 467840
FIXED-IN: 23.04